--- a/platform/tsconfig.json
+++ b/platform/tsconfig.json
@@ -22,7 +22,8 @@
       "@backend/*": ["./backend/src/*"],
       "@backend-types/*": ["./backend/types/*"],
       "@backend-tests/*": ["./backend/tests/*"],
-      "@app/*": ["./app/src/*"],
+      "@app-client/*": ["./app/src/client/*"],
+      "@app-api/*": ["./app/src/api/*"],
       "@app-types/*": ["./app/types/*"]
     }
   }
