--- a/platform/package.json
+++ b/platform/package.json
@@ -18,23 +18,25 @@
     }
   },
   "dependencies": {
-    "hono": "catalog:cloudflare",
     "@base-org/account": "catalog:coinbase",
-    "@coinbase/cdp-sdk": "catalog:coinbase",
     "@coinbase/cdp-core": "catalog:coinbase",
     "@coinbase/cdp-hooks": "catalog:coinbase",
     "@coinbase/cdp-react": "catalog:coinbase",
-    "viem": "catalog:crypto",
+    "@coinbase/cdp-sdk": "catalog:coinbase",
+    "@radix-ui/react-dialog": "^1.1.15",
+    "@radix-ui/react-dropdown-menu": "^2.1.16",
+    "@tanstack/react-query": "catalog:react",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "drizzle-orm": "^0.44.7",
+    "hono": "catalog:cloudflare",
+    "lucide-react": "^0.555.0",
     "react": "catalog:react",
     "react-dom": "catalog:react",
     "react-router-dom": "catalog:react",
-    "@tanstack/react-query": "catalog:react",
     "tailwind-merge": "catalog:tailwind",
     "tailwindcss": "catalog:tailwind",
-    "class-variance-authority": "^0.7.1",
-    "clsx": "^2.1.1",
-    "lucide-react": "^0.555.0",
-    "drizzle-orm": "^0.44.7"
+    "viem": "catalog:crypto"
   },
   "devDependencies": {
     "alchemy": "catalog:",
