--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
   },
   "workspaces": {
     "packages": [
-      "platform"
+      "platform",
+      "examples/*",
+      "packages/*"
     ],
     "catalog": {
       "alchemy": "^0.79.0",
