--- a/platform/package.json
+++ b/platform/package.json
@@ -30,6 +30,7 @@
     "clsx": "^2.1.1",
     "drizzle-orm": "^0.44.7",
     "hono": "catalog:cloudflare",
+    "hono-rate-limiter": "^0.5.0",
     "lucide-react": "^0.555.0",
     "react": "catalog:react",
     "react-dom": "catalog:react",
