--- a/package.json
+++ b/package.json
@@ -21,16 +21,16 @@
       "packages/*"
     ],
     "catalog": {
-      "alchemy": "https://pkg.pr.new/alchemy-run/alchemy@1278",
+      "alchemy": "^0.82.0",
       "typescript": "^5.9.3"
     },
     "catalogs": {
       "cloudflare": {
-        "miniflare": "^4.20251202.0",
-        "@cloudflare/workers-types": "^4.20251202.0",
-        "@types/node": "^24.10.1",
-        "hono": "^4.10.7",
-        "@cloudflare/vite-plugin": "^1.16.1"
+        "miniflare": "^4.20251217.0",
+        "@cloudflare/workers-types": "^4.20251220.0",
+        "@types/node": "^25.0.3 ",
+        "hono": "^4.11.1",
+        "@cloudflare/vite-plugin": "^1.19.0"
       },
       "coinbase": {
         "@base-org/account": "^2.5.1",
@@ -40,26 +40,26 @@
         "@coinbase/cdp-react": "^0.0.73"
       },
       "crypto": {
-        "viem": "^2.41.2",
+        "viem": "^2.43.2",
         "wagmi": "^3.1.0"
       },
       "react": {
-        "react": "^19.2.1",
-        "react-dom": "^19.2.1",
-        "react-router-dom": "^7.10.0",
+        "react": "^19.2.3",
+        "react-dom": "^19.2.3",
+        "react-router-dom": "^7.11.0",
         "@types/react": "19.2.7",
         "@types/react-dom": "19.2.3",
         "@tanstack/react-query": "^5.90.12"
       },
       "vite": {
-        "vite": "^7.2.6",
+        "vite": "^7.3.0",
         "vite-plugin-node-polyfills": "^0.24.0",
-        "@vitejs/plugin-react": "^5.1.1",
-        "vite-tsconfig-paths": "^5.1.4",
-        "@tailwindcss/vite": "^4.1.17"
+        "@vitejs/plugin-react": "^5.1.2",
+        "vite-tsconfig-paths": "^6.0.3",
+        "@tailwindcss/vite": "^4.1.18"
       },
       "tailwind": {
-        "tailwindcss": "^4.1.17",
+        "tailwindcss": "^4.1.18",
         "tailwind-merge": "^3.4.0",
         "tw-animate-css": "^1.4.0"
       }
@@ -70,5 +70,5 @@
     "bun": "latest",
     "@biomejs/biome": "latest"
   },
-  "packageManager": "bun@1.3.0"
+  "packageManager": "bun@1.3.5"
 }
